Minor spacing fix for featured modules

--- a/src/less/template.less
+++ b/src/less/template.less
@@ -2193,6 +2193,10 @@ body {
 #featured {
     margin-bottom: 30px;
     border-bottom: 6px solid @color-four;
+
+	[class*="moduletable"] {
+		margin-bottom: 20px;
+	}
 }
 .full-image {
     &.full-image-margin {
